parsers/cpp/gen/SensorLogParser.cpp

// Generated from ./gen/SensorLog.g4 by ANTLR 4.13.2

#include "SensorLogListener.h"

#include "SensorLogParser.h"

using namespace antlrcpp;

using namespace antlr4;

namespace {

struct SensorLogParserStaticData final {
  SensorLogParserStaticData(std::vector<std::string> ruleNames,
                            std::vector<std::string> literalNames,
                            std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  SensorLogParserStaticData(const SensorLogParserStaticData &) = delete;
  SensorLogParserStaticData(SensorLogParserStaticData &&) = delete;
  SensorLogParserStaticData &
  operator=(const SensorLogParserStaticData &) = delete;
  SensorLogParserStaticData &operator=(SensorLogParserStaticData &&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag sensorlogParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
    std::unique_ptr<SensorLogParserStaticData>
        sensorlogParserStaticData = nullptr;

void sensorlogParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (sensorlogParserStaticData != nullptr) {
    return;
  }
#else
  assert(sensorlogParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<SensorLogParserStaticData>(
      std::vector<std::string>{
          "file", "deviceDefinitions", "deviceDefinition", "deviceContent",
          "deviceName", "sensorDefinition", "sensorName", "sensorNamePart",
          "dataType", "unitOfMeasurement", "unitPart", "deviceId", "padding"},
      std::vector<std::string>{"", "'$ '", "'|'", "'<'", "'>'", "','", "'\\'",
                               "'/'", "'float'", "'u32'", "'u8'", "'u16'", "",
                               "", "", "' '"},
      std::vector<std::string>{"", "DOLLAR_SPACE", "PIPE", "LT", "GT", "COMMA",
                               "BACKSLASH", "SLASH", "FLOAT_TYPE", "U32_TYPE",
                               "U8_TYPE", "U16_TYPE", "DEVICE_ID_NUMBER",
                               "IDENTIFIER", "NUMBER", "SPACE", "WS", "ANY"});
  staticData->serializedATN = antlr4::atn::SerializedATNView(
      serializedATNSegment,
      sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) {
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i),
                                           i);
  }
  sensorlogParserStaticData = std::move(staticData);
}

} // namespace

SensorLogParser::SensorLogParser(TokenStream *input)
    : SensorLogParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

SensorLogParser::SensorLogParser(
    TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options)
    : Parser(input) {
  SensorLogParser::initialize();
  _interpreter = new atn::ParserATNSimulator(
      this, *sensorlogParserStaticData->atn,
      sensorlogParserStaticData->decisionToDFA,
      sensorlogParserStaticData->sharedContextCache, options);
}

SensorLogParser::~SensorLogParser() { delete _interpreter; }

const atn::ATN &SensorLogParser::getATN() const {
  return *sensorlogParserStaticData->atn;
}

std::string SensorLogParser::getGrammarFileName() const {
  return "SensorLog.g4";
}

const std::vector<std::string> &SensorLogParser::getRuleNames() const {
  return sensorlogParserStaticData->ruleNames;
}

const dfa::Vocabulary &SensorLogParser::getVocabulary() const {
  return sensorlogParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView SensorLogParser::getSerializedATN() const {
  return sensorlogParserStaticData->serializedATN;
}

//----------------- FileContext
//------------------------------------------------------------------

SensorLogParser::FileContext::FileContext(ParserRuleContext *parent,
                                          size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode *SensorLogParser::FileContext::DOLLAR_SPACE() {
  return getToken(SensorLogParser::DOLLAR_SPACE, 0);
}

SensorLogParser::DeviceDefinitionsContext *
SensorLogParser::FileContext::deviceDefinitions() {
  return getRuleContext<SensorLogParser::DeviceDefinitionsContext>(0);
}

tree::TerminalNode *SensorLogParser::FileContext::BACKSLASH() {
  return getToken(SensorLogParser::BACKSLASH, 0);
}

tree::TerminalNode *SensorLogParser::FileContext::EOF() {
  return getToken(SensorLogParser::EOF, 0);
}

SensorLogParser::PaddingContext *SensorLogParser::FileContext::padding() {
  return getRuleContext<SensorLogParser::PaddingContext>(0);
}

size_t SensorLogParser::FileContext::getRuleIndex() const {
  return SensorLogParser::RuleFile;
}

void SensorLogParser::FileContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SensorLogListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFile(this);
}

void SensorLogParser::FileContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SensorLogListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFile(this);
}

SensorLogParser::FileContext *SensorLogParser::file() {
  FileContext *_localctx =
      _tracker.createInstance<FileContext>(_ctx, getState());
  enterRule(_localctx, 0, SensorLogParser::RuleFile);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(26);
    match(SensorLogParser::DOLLAR_SPACE);
    setState(27);
    deviceDefinitions();
    setState(28);
    match(SensorLogParser::BACKSLASH);
    setState(30);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~0x3fULL) == 0) && ((1ULL << _la) & 262142) != 0)) {
      setState(29);
      padding();
    }
    setState(32);
    match(SensorLogParser::EOF);

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeviceDefinitionsContext
//------------------------------------------------------------------

SensorLogParser::DeviceDefinitionsContext::DeviceDefinitionsContext(
    ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

std::vector<SensorLogParser::DeviceDefinitionContext *>
SensorLogParser::DeviceDefinitionsContext::deviceDefinition() {
  return getRuleContexts<SensorLogParser::DeviceDefinitionContext>();
}

SensorLogParser::DeviceDefinitionContext *
SensorLogParser::DeviceDefinitionsContext::deviceDefinition(size_t i) {
  return getRuleContext<SensorLogParser::DeviceDefinitionContext>(i);
}

std::vector<tree::TerminalNode *>
SensorLogParser::DeviceDefinitionsContext::SPACE() {
  return getTokens(SensorLogParser::SPACE);
}

tree::TerminalNode *SensorLogParser::DeviceDefinitionsContext::SPACE(size_t i) {
  return getToken(SensorLogParser::SPACE, i);
}

size_t SensorLogParser::DeviceDefinitionsContext::getRuleIndex() const {
  return SensorLogParser::RuleDeviceDefinitions;
}

void SensorLogParser::DeviceDefinitionsContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SensorLogListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeviceDefinitions(this);
}

void SensorLogParser::DeviceDefinitionsContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SensorLogListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeviceDefinitions(this);
}

SensorLogParser::DeviceDefinitionsContext *
SensorLogParser::deviceDefinitions() {
  DeviceDefinitionsContext *_localctx =
      _tracker.createInstance<DeviceDefinitionsContext>(_ctx, getState());
  enterRule(_localctx, 2, SensorLogParser::RuleDeviceDefinitions);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(34);
    deviceDefinition();
    setState(39);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SensorLogParser::SPACE) {
      setState(35);
      match(SensorLogParser::SPACE);
      setState(36);
      deviceDefinition();
      setState(41);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeviceDefinitionContext
//------------------------------------------------------------------

SensorLogParser::DeviceDefinitionContext::DeviceDefinitionContext(
    ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

std::vector<tree::TerminalNode *>
SensorLogParser::DeviceDefinitionContext::PIPE() {
  return getTokens(SensorLogParser::PIPE);
}

tree::TerminalNode *SensorLogParser::DeviceDefinitionContext::PIPE(size_t i) {
  return getToken(SensorLogParser::PIPE, i);
}

SensorLogParser::DeviceContentContext *
SensorLogParser::DeviceDefinitionContext::deviceContent() {
  return getRuleContext<SensorLogParser::DeviceContentContext>(0);
}

size_t SensorLogParser::DeviceDefinitionContext::getRuleIndex() const {
  return SensorLogParser::RuleDeviceDefinition;
}

void SensorLogParser::DeviceDefinitionContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SensorLogListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeviceDefinition(this);
}

void SensorLogParser::DeviceDefinitionContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SensorLogListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeviceDefinition(this);
}

SensorLogParser::DeviceDefinitionContext *SensorLogParser::deviceDefinition() {
  DeviceDefinitionContext *_localctx =
      _tracker.createInstance<DeviceDefinitionContext>(_ctx, getState());
  enterRule(_localctx, 4, SensorLogParser::RuleDeviceDefinition);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(42);
    match(SensorLogParser::PIPE);
    setState(43);
    deviceContent();
    setState(44);
    match(SensorLogParser::PIPE);

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeviceContentContext
//------------------------------------------------------------------

SensorLogParser::DeviceContentContext::DeviceContentContext(
    ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

SensorLogParser::DeviceNameContext *
SensorLogParser::DeviceContentContext::deviceName() {
  return getRuleContext<SensorLogParser::DeviceNameContext>(0);
}

std::vector<tree::TerminalNode *>
SensorLogParser::DeviceContentContext::SPACE() {
  return getTokens(SensorLogParser::SPACE);
}

tree::TerminalNode *SensorLogParser::DeviceContentContext::SPACE(size_t i) {
  return getToken(SensorLogParser::SPACE, i);
}

SensorLogParser::DeviceIdContext *
SensorLogParser::DeviceContentContext::deviceId() {
  return getRuleContext<SensorLogParser::DeviceIdContext>(0);
}

std::vector<SensorLogParser::SensorDefinitionContext *>
SensorLogParser::DeviceContentContext::sensorDefinition() {
  return getRuleContexts<SensorLogParser::SensorDefinitionContext>();
}

SensorLogParser::SensorDefinitionContext *
SensorLogParser::DeviceContentContext::sensorDefinition(size_t i) {
  return getRuleContext<SensorLogParser::SensorDefinitionContext>(i);
}

size_t SensorLogParser::DeviceContentContext::getRuleIndex() const {
  return SensorLogParser::RuleDeviceContent;
}

void SensorLogParser::DeviceContentContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SensorLogListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeviceContent(this);
}

void SensorLogParser::DeviceContentContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SensorLogListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeviceContent(this);
}

SensorLogParser::DeviceContentContext *SensorLogParser::deviceContent() {
  DeviceContentContext *_localctx =
      _tracker.createInstance<DeviceContentContext>(_ctx, getState());
  enterRule(_localctx, 6, SensorLogParser::RuleDeviceContent);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(46);
    deviceName();
    setState(49);
    _errHandler->sync(this);
    alt = 1;
    do {
      switch (alt) {
      case 1: {
        setState(47);
        match(SensorLogParser::SPACE);
        setState(48);
        sensorDefinition();
        break;
      }

      default:
        throw NoViableAltException(this);
      }
      setState(51);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input,
                                                                       2, _ctx);
    } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
    setState(53);
    match(SensorLogParser::SPACE);
    setState(54);
    deviceId();

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeviceNameContext
//------------------------------------------------------------------

SensorLogParser::DeviceNameContext::DeviceNameContext(ParserRuleContext *parent,
                                                      size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode *SensorLogParser::DeviceNameContext::IDENTIFIER() {
  return getToken(SensorLogParser::IDENTIFIER, 0);
}

size_t SensorLogParser::DeviceNameContext::getRuleIndex() const {
  return SensorLogParser::RuleDeviceName;
}

void SensorLogParser::DeviceNameContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SensorLogListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeviceName(this);
}

void SensorLogParser::DeviceNameContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SensorLogListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeviceName(this);
}

SensorLogParser::DeviceNameContext *SensorLogParser::deviceName() {
  DeviceNameContext *_localctx =
      _tracker.createInstance<DeviceNameContext>(_ctx, getState());
  enterRule(_localctx, 8, SensorLogParser::RuleDeviceName);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(56);
    match(SensorLogParser::IDENTIFIER);

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SensorDefinitionContext
//------------------------------------------------------------------

SensorLogParser::SensorDefinitionContext::SensorDefinitionContext(
    ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode *SensorLogParser::SensorDefinitionContext::LT() {
  return getToken(SensorLogParser::LT, 0);
}

SensorLogParser::SensorNameContext *
SensorLogParser::SensorDefinitionContext::sensorName() {
  return getRuleContext<SensorLogParser::SensorNameContext>(0);
}

std::vector<tree::TerminalNode *>
SensorLogParser::SensorDefinitionContext::COMMA() {
  return getTokens(SensorLogParser::COMMA);
}

tree::TerminalNode *SensorLogParser::SensorDefinitionContext::COMMA(size_t i) {
  return getToken(SensorLogParser::COMMA, i);
}

SensorLogParser::DataTypeContext *
SensorLogParser::SensorDefinitionContext::dataType() {
  return getRuleContext<SensorLogParser::DataTypeContext>(0);
}

SensorLogParser::UnitOfMeasurementContext *
SensorLogParser::SensorDefinitionContext::unitOfMeasurement() {
  return getRuleContext<SensorLogParser::UnitOfMeasurementContext>(0);
}

tree::TerminalNode *SensorLogParser::SensorDefinitionContext::GT() {
  return getToken(SensorLogParser::GT, 0);
}

size_t SensorLogParser::SensorDefinitionContext::getRuleIndex() const {
  return SensorLogParser::RuleSensorDefinition;
}

void SensorLogParser::SensorDefinitionContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SensorLogListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSensorDefinition(this);
}

void SensorLogParser::SensorDefinitionContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SensorLogListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSensorDefinition(this);
}

SensorLogParser::SensorDefinitionContext *SensorLogParser::sensorDefinition() {
  SensorDefinitionContext *_localctx =
      _tracker.createInstance<SensorDefinitionContext>(_ctx, getState());
  enterRule(_localctx, 10, SensorLogParser::RuleSensorDefinition);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(58);
    match(SensorLogParser::LT);
    setState(59);
    sensorName();
    setState(60);
    match(SensorLogParser::COMMA);
    setState(61);
    dataType();
    setState(62);
    match(SensorLogParser::COMMA);
    setState(63);
    unitOfMeasurement();
    setState(64);
    match(SensorLogParser::GT);

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SensorNameContext
//------------------------------------------------------------------

SensorLogParser::SensorNameContext::SensorNameContext(ParserRuleContext *parent,
                                                      size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

std::vector<SensorLogParser::SensorNamePartContext *>
SensorLogParser::SensorNameContext::sensorNamePart() {
  return getRuleContexts<SensorLogParser::SensorNamePartContext>();
}

SensorLogParser::SensorNamePartContext *
SensorLogParser::SensorNameContext::sensorNamePart(size_t i) {
  return getRuleContext<SensorLogParser::SensorNamePartContext>(i);
}

std::vector<tree::TerminalNode *> SensorLogParser::SensorNameContext::SPACE() {
  return getTokens(SensorLogParser::SPACE);
}

tree::TerminalNode *SensorLogParser::SensorNameContext::SPACE(size_t i) {
  return getToken(SensorLogParser::SPACE, i);
}

size_t SensorLogParser::SensorNameContext::getRuleIndex() const {
  return SensorLogParser::RuleSensorName;
}

void SensorLogParser::SensorNameContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SensorLogListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSensorName(this);
}

void SensorLogParser::SensorNameContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SensorLogListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSensorName(this);
}

SensorLogParser::SensorNameContext *SensorLogParser::sensorName() {
  SensorNameContext *_localctx =
      _tracker.createInstance<SensorNameContext>(_ctx, getState());
  enterRule(_localctx, 12, SensorLogParser::RuleSensorName);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(66);
    sensorNamePart();
    setState(71);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SensorLogParser::SPACE) {
      setState(67);
      match(SensorLogParser::SPACE);
      setState(68);
      sensorNamePart();
      setState(73);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SensorNamePartContext
//------------------------------------------------------------------

SensorLogParser::SensorNamePartContext::SensorNamePartContext(
    ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode *SensorLogParser::SensorNamePartContext::IDENTIFIER() {
  return getToken(SensorLogParser::IDENTIFIER, 0);
}

tree::TerminalNode *SensorLogParser::SensorNamePartContext::NUMBER() {
  return getToken(SensorLogParser::NUMBER, 0);
}

size_t SensorLogParser::SensorNamePartContext::getRuleIndex() const {
  return SensorLogParser::RuleSensorNamePart;
}

void SensorLogParser::SensorNamePartContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SensorLogListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSensorNamePart(this);
}

void SensorLogParser::SensorNamePartContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SensorLogListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSensorNamePart(this);
}

SensorLogParser::SensorNamePartContext *SensorLogParser::sensorNamePart() {
  SensorNamePartContext *_localctx =
      _tracker.createInstance<SensorNamePartContext>(_ctx, getState());
  enterRule(_localctx, 14, SensorLogParser::RuleSensorNamePart);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(74);
    _la = _input->LA(1);
    if (!(_la == SensorLogParser::IDENTIFIER

          || _la == SensorLogParser::NUMBER)) {
      _errHandler->recoverInline(this);
    } else {
      _errHandler->reportMatch(this);
      consume();
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DataTypeContext
//------------------------------------------------------------------

SensorLogParser::DataTypeContext::DataTypeContext(ParserRuleContext *parent,
                                                  size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode *SensorLogParser::DataTypeContext::FLOAT_TYPE() {
  return getToken(SensorLogParser::FLOAT_TYPE, 0);
}

tree::TerminalNode *SensorLogParser::DataTypeContext::U32_TYPE() {
  return getToken(SensorLogParser::U32_TYPE, 0);
}

tree::TerminalNode *SensorLogParser::DataTypeContext::U8_TYPE() {
  return getToken(SensorLogParser::U8_TYPE, 0);
}

tree::TerminalNode *SensorLogParser::DataTypeContext::U16_TYPE() {
  return getToken(SensorLogParser::U16_TYPE, 0);
}

size_t SensorLogParser::DataTypeContext::getRuleIndex() const {
  return SensorLogParser::RuleDataType;
}

void SensorLogParser::DataTypeContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SensorLogListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDataType(this);
}

void SensorLogParser::DataTypeContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SensorLogListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDataType(this);
}

SensorLogParser::DataTypeContext *SensorLogParser::dataType() {
  DataTypeContext *_localctx =
      _tracker.createInstance<DataTypeContext>(_ctx, getState());
  enterRule(_localctx, 16, SensorLogParser::RuleDataType);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(76);
    _la = _input->LA(1);
    if (!((((_la & ~0x3fULL) == 0) && ((1ULL << _la) & 3840) != 0))) {
      _errHandler->recoverInline(this);
    } else {
      _errHandler->reportMatch(this);
      consume();
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UnitOfMeasurementContext
//------------------------------------------------------------------

SensorLogParser::UnitOfMeasurementContext::UnitOfMeasurementContext(
    ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

std::vector<SensorLogParser::UnitPartContext *>
SensorLogParser::UnitOfMeasurementContext::unitPart() {
  return getRuleContexts<SensorLogParser::UnitPartContext>();
}

SensorLogParser::UnitPartContext *
SensorLogParser::UnitOfMeasurementContext::unitPart(size_t i) {
  return getRuleContext<SensorLogParser::UnitPartContext>(i);
}

tree::TerminalNode *SensorLogParser::UnitOfMeasurementContext::SLASH() {
  return getToken(SensorLogParser::SLASH, 0);
}

size_t SensorLogParser::UnitOfMeasurementContext::getRuleIndex() const {
  return SensorLogParser::RuleUnitOfMeasurement;
}

void SensorLogParser::UnitOfMeasurementContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SensorLogListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUnitOfMeasurement(this);
}

void SensorLogParser::UnitOfMeasurementContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SensorLogListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUnitOfMeasurement(this);
}

SensorLogParser::UnitOfMeasurementContext *
SensorLogParser::unitOfMeasurement() {
  UnitOfMeasurementContext *_localctx =
      _tracker.createInstance<UnitOfMeasurementContext>(_ctx, getState());
  enterRule(_localctx, 18, SensorLogParser::RuleUnitOfMeasurement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(78);
    unitPart();
    setState(81);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SensorLogParser::SLASH) {
      setState(79);
      match(SensorLogParser::SLASH);
      setState(80);
      unitPart();
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UnitPartContext
//------------------------------------------------------------------

SensorLogParser::UnitPartContext::UnitPartContext(ParserRuleContext *parent,
                                                  size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode *SensorLogParser::UnitPartContext::IDENTIFIER() {
  return getToken(SensorLogParser::IDENTIFIER, 0);
}

tree::TerminalNode *SensorLogParser::UnitPartContext::NUMBER() {
  return getToken(SensorLogParser::NUMBER, 0);
}

size_t SensorLogParser::UnitPartContext::getRuleIndex() const {
  return SensorLogParser::RuleUnitPart;
}

void SensorLogParser::UnitPartContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SensorLogListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUnitPart(this);
}

void SensorLogParser::UnitPartContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SensorLogListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUnitPart(this);
}

SensorLogParser::UnitPartContext *SensorLogParser::unitPart() {
  UnitPartContext *_localctx =
      _tracker.createInstance<UnitPartContext>(_ctx, getState());
  enterRule(_localctx, 20, SensorLogParser::RuleUnitPart);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(83);
    _la = _input->LA(1);
    if (!(_la == SensorLogParser::IDENTIFIER

          || _la == SensorLogParser::NUMBER)) {
      _errHandler->recoverInline(this);
    } else {
      _errHandler->reportMatch(this);
      consume();
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeviceIdContext
//------------------------------------------------------------------

SensorLogParser::DeviceIdContext::DeviceIdContext(ParserRuleContext *parent,
                                                  size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}
